<resources>
    <string name="app_name">HSM Kits</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_push">Push</string>
    <string name="menu_map">Map</string>

    <string name="home_second">Home Second</string>
    <string name="login_with_token_id">Login with Token ID</string>
    <string name="login_with_authen_code">Login with Authentication Code</string>
    <string name="login_with_silent">Login silently</string>
    <string name="signout">Sign out</string>
    <string name="menu_health">Health</string>
	
    <string name="hms_cancel">Cancel</string>
    <string name="action_sign_in">Sign In</string>
    <string name="state_loading_current_user">Getting current user</string>
    <string name="format_user_name">Username: %s</string>
    <string name="start_geofence">Start GeoFence</string>
</resources>
