<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nhat.huaweikit.demo.huawei.ui.account.AccountFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_push"
        android:name="com.nhat.huaweikit.demo.hwhelper.ui.push.PushFragment"
        android:label="@string/menu_push"
        tools:layout="@layout/fragment_push" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.nhat.huaweikit.demo.huawei.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_health"
        android:name="com.nhat.huaweikit.demo.hwhelper.ui.health.HealthFragment"
        android:label="@string/menu_health"
        tools:layout="@layout/fragment_health" />
</navigation>