<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_login_with_token"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/hwid_auth_button_color_red"
                android:textColor="@color/hwid_auth_button_color_text_white"
                android:text="@string/login_with_token_id"
                android:drawableStart="@drawable/hw_logo2" />
            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/btn_login_with_auth_code"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColor="@color/hwid_auth_button_color_text_white"
                android:background="@color/hwid_auth_button_color_blue"
                android:drawableStart="@drawable/hw_logo2"
                android:text="@string/login_with_authen_code" />
            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/btn_sign_out"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/signout" />

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/hms_cancel" />
        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>